[gd_scene load_steps=2 format=3 uid="uid://cm8te31wedhp2"]

[ext_resource type="Script" path="res://scenes/episode_panel/episode_panel.gd" id="1_152j6"]

[node name="EpisodePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_152j6")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Margin"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="VBox" type="VBoxContainer" parent="Margin/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EpisodeFlow" type="HFlowContainer" parent="Margin/Scroll/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LoadButtonsBar" type="HBoxContainer" parent="Margin/Scroll/VBox"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="LoadMoreButton" type="Button" parent="Margin/Scroll/VBox/LoadButtonsBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "More"
flat = true

[node name="LoadLessButton" type="Button" parent="Margin/Scroll/VBox/LoadButtonsBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Less"
flat = true
